--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /target/
+/target/classes/
+/target/generated-sources/
+/target/maven-archiver/
+/target/maven-status/
+/target/consultacnpj-0.0.1-SNAPSHOT.jar
+/target/consultacnpj-0.0.1-SNAPSHOT.jar.original
